--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,7 @@
                     <a href="#tab-32" data-toggle="tab" aria-expanded="false">Finish</a>
                   </li>
                 </ul>
-                <form class="tab-content" role="form" method="POST">
+                <form class="tab-content" role="form" method="POST" action="/api/transactions">
                   <div id="progressbar-wizard" class="progress">
                     <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="26" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
                     </div>
