--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,15 +121,15 @@
 					<div class="block divcenter" style="background-color: #FFF; max-width: 400px;">
 						<div style="padding: 50px;">
 							<h3 class="font-body">Login to your Account</h3>
-							<form action="#" method="post" class="nobottommargin">
+							<form action="/api/users/login" method="post" class="nobottommargin">
 								<div class="col_full">
 									<label class="font-body capitalize" for="login-form-modal-username">Email Address:</label>
-									<input type="text" id="login-form-modal-username" name="login-form-modal-username" value="" class="form-control" />
+									<input type="text" id="login-form-modal-username" name="email" value="" class="form-control" />
 								</div>
 
 								<div class="col_full">
 									<label class="font-body capitalize" for="login-form-modal-password">Password:</label>
-									<input type="password" id="login-form-modal-password" name="login-form-modal-password" value="" class="form-control" />
+									<input type="password" id="login-form-modal-password" name="password" value="" class="form-control" />
 								</div>
 
 								<div class="col_full nobottommargin">
