populate user at transactions respon

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@
 									<li><a href="#">My Transaction</a></li>
 
 									<li class="divider"></li>
-									<li><a href="#">Logout</a></li>
+									<li><a href="/logout">Logout</a></li>
 								  </ul>
 								</li>
 							  </ul>
