--- a/views/home.ejs
+++ b/views/home.ejs
@@ -100,11 +100,12 @@
 						<div class="panel panel-default" id="kotak-post">
 							<div class="panel-body">
 								<div class="tabs clearfix ui-tabs ui-widget ui-widget-content ui-corner-all" id="tab-3">
-
 									<ul class="tab-nav tab-nav2 clearfix ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all" role="tablist">
-										<li class="ui-state-default ui-corner-top ui-tabs-active ui-state-active" role="tab" tabindex="0" aria-controls="tabs-9" aria-labelledby="ui-id-21" aria-selected="true" aria-expanded="true"><a href="#tabs-post" class="ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-21"><i class="icon-home2 norightmargin"></i></a></li>
-										<li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="tabs-10" aria-labelledby="ui-id-22" aria-selected="false" aria-expanded="false"><a href="#tabs-transaction" class="ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-22">Request Transaction</a></li>
-
+										<li class="ui-state-default ui-corner-top ui-tabs-active ui-state-active" role="tab" tabindex="0" aria-controls="tabs-9" aria-labelledby="ui-id-21" aria-selected="true" aria-expanded="true"><a href="#tabs-post" class="ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-21"><i class="icon-home2 norightmargin"></i></a>
+										</li>
+										<li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="tabs-10" aria-labelledby="ui-id-22" aria-selected="false" aria-expanded="false">
+											<a href="#tabs-transaction" class="ui-tabs-anchor" role="presentation" tabindex="-1" id="ui-id-22">Request Transaction</a>
+										</li>
 									</ul>
 									<div class="tab-container">
 										<div class="tab-content clearfix ui-tabs-panel ui-widget-content ui-corner-bottom" id="tabs-post" aria-labelledby="ui-id-21" role="tabpanel" aria-hidden="false" style="display: block;">
